Add SearchDestination API
