# src/processors/models/destinations.ts
@@ -1,0 +1,18 @@
+export interface SearchDestinationsInput {
+  query: string
+}
+
+export interface SearchDestinationsOutput {
+  destinations: Destination[];
+}
+
+export interface Destination {
+  destId: string;
+  destType: string;
+  cityName: string;
+  label: string;
+  region: string;
+  name: string;
+  country: string;
+  imageUrl: string;
+}
